--- a/home.html
+++ b/home.html
@@ -291,7 +291,7 @@
             <p class="lead">г. Киров, ул. Ленина 119А (м-н Спортмастер)<br />цокольный этаж, въезд с торца здания.</p>
         </div>
         <div class="map">
-            <iframe frameborder="no" style="border: 0;" width="100%" height="500" src="http://widgets.2gis.com/widget?type=firmsonmap&amp;options=%7B%22pos%22%3A%7B%22lat%22%3A58.58867899053598%2C%22lon%22%3A49.68157052993775%2C%22zoom%22%3A16%7D%2C%22opt%22%3A%7B%22city%22%3A%22kirov%22%7D%2C%22org%22%3A%2270000001007015542%22%7D"></iframe>
+            <iframe frameborder="no" style="border: 0;" width="100%" height="500" src="https://widgets.2gis.com/widget?type=firmsonmap&amp;options=%7B%22pos%22%3A%7B%22lat%22%3A58.58867899053598%2C%22lon%22%3A49.68157052993775%2C%22zoom%22%3A16%7D%2C%22opt%22%3A%7B%22city%22%3A%22kirov%22%7D%2C%22org%22%3A%2270000001007015542%22%7D"></iframe>
         </div>
         <footer class="jumbotron jumbotron-fluid pt-4 mt-0 pb-0 mb-0 footer">
             <div class="container">
