Header as franshise 1300px

--- a/home.html
+++ b/home.html
@@ -30,11 +30,11 @@
     <video autoplay loop muted poster="img/videopic2.jpg" class="background home">
 		<source src="img/background-small-160.mp4" type="video/mp4">
 	</video>
-    <nav class="pb-0 navbar fixed-top  navbar-expand-lg  navbar-light custom-navbar justify-content-between" data-toggle="affix">
-        <div class="container">
+    <nav class="pb-0 pt-1 navbar fixed-top  navbar-expand-lg  navbar-light custom-navbar justify-content-between" data-toggle="affix">
+        <div class="container px-0">
 
-            <a class="pl-1 navbar-brand left" href="#home" id="logotype">
-                <img src="img/logo.svg" width="250" height="64" class="d-inline-block align-top" alt="СТОПСКОЛ">
+            <a class="pl-0 navbar-brand left" href="#home" id="logotype">
+                <img src="img/logo.svg" width="186" height="64" class="d-inline-block align-top" alt="СТОПСКОЛ">
             </a>
 
             <nav class="pt-0 menu navbar navbar-expand-md  navbar-light">
