Fix modal footer

--- a/home.html
+++ b/home.html
@@ -260,7 +260,7 @@
 
 
                                     </div>
-                                    <div class="modal-footer text-left">
+                                    <div class="modal-footer justify-content-between text-left">
                                         <p>г. Киров, ул. Ленина 119А Сервис STOP СКОЛ тел.: <a href="tel:+78332452947">+7(8332)452947</a></p>
                                     </div>
                                 </div>
