--- a/home.html
+++ b/home.html
@@ -323,37 +323,31 @@
                 <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <h3 class="py-4">Защитное покрытие «Антидождь»</h3>
-                            <iframe class="pb-3" width="800" height="450" src="https://www.youtube.com/embed/1DzrAtZYGIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <p>Защита, бронирование слабых, особо уязвимых мест, прозрачной полиуретановой пленкой по системе STOP СКОЛ усилит прочностные характеристики лобового стекла, в разы увеличит шансы сохранить стекло на весь срок эксплуатации.</p>
-
-                            <p>Периметр является слабой, наиболее уязвимой частью лобового стекла. Удар в эту область гарантированно приводит к образованию длинных трещин, а так же двухсторонних не ремонтопригодных повреждений и в 90% случаев приводит к
-                                замене лобового стекла. Установлено экспериментально, а также путем сбора и анализа разбитых лобовых стекол.</p>
-                            <p>Каждый образец был разработан и проверен на соответствие лобовому стеклу конкретного автомобиля и протестировано в полевых условиях на протяжении двух лет. Лекала снимаются, оцифровываются при помощи современного оборудования
-                                и вырезаются на ЧПУ станке. Подробная инструкция по монтажу прилагается. </p>
+                            <h3 class="py-4">Защитное полимерное покрытие автостекол</h3>
+                            <iframe class="pb-4" width="800" height="450" src="https://www.youtube.com/embed/gdmop7-Rp8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                             <div class="card-group mb-3 text-left card-group-rain">
                                 <div class="card box-shadow">
                                     <div class="card-body">
                                         <h4 class="card-title">Легковая</h4>
-                                        <h4 class="card-title">3500 <small class="text-muted">руб</small></h4>
+                                        <h4 class="card-title">550 <small class="text-muted">руб</small></h4>
                                     </div>
                                 </div>
                                 <div class="card box-shadow">
                                     <div class="card-body">
                                         <h4 class="card-title">Внедорожник</h4>
-                                        <h4 class="card-title">4500 <small class="text-muted">руб</small></h4>
+                                        <h4 class="card-title">600 <small class="text-muted">руб</small></h4>
                                     </div>
                                 </div>
                                 <div class="card box-shadow">
                                     <div class="card-body">
                                         <h4 class="card-title">Микроавтобус</h4>
-                                        <h4 class="card-title">5000 <small class="text-muted">руб</small></h4>
+                                        <h4 class="card-title">650 <small class="text-muted">руб</small></h4>
                                     </div>
                                 </div>
                             </div>
 
-                            <p>На любые вопросы по технологии бронирования подробнее расскажет и запишет на установку Михаил Смирнов по тел.: <a href="tel:+79229200025">+79229200025</a></p>
+                            <p>Предварительная запись на нанесение покрытия по тел.: <a href="tel:+78332452947">+7(8332)452947</a></p>
 
 
                         </div>
