--- a/home.html
+++ b/home.html
@@ -207,7 +207,7 @@
                         <h4 class="card-title">Защита (бронирование) лобовых автостекол</h4>
                         <p class="card-text">По системе «STOPСКОЛ» — профилактика появления сколов и длинных трещин.
                         </p>
-                        <h4 class="card-title">От 3500 <small class="text-muted">руб</small></h4>
+                        <h4 class="card-title">От 4000 <small class="text-muted">руб</small></h4>
                         <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#glassarmorModal">
                             Подробнее
                           </button>
@@ -220,48 +220,46 @@
                                         <path d="M1 1L10 10L1 19" stroke="#000000" stroke-width="2"></path>
                                     </svg>
                                 </button>
-                                <h5 class="modal-title" id="exampleModalLongTitle">Защита лобовых автостекол по системе STOP СКОЛ.</h5>
+                                <h5 class="modal-title" id="exampleModalLongTitle">Защита лобовых автостекол</h5>
 
                             </div>
                             <div class="modal-dialog modal-lg" role="document">
                                 <div class="modal-content">
                                     <div class="modal-body">
-                                        <h3 class="py-4">Бронирование лобового стекла</h3>
+                                        <h3 class="py-4">Бронирование лобового стекла по системе STOP СКОЛ</h3>
                                         <img class="pb-3" width="100%" src="img/armor/stopskol-armor-patented-compressed2.jpg">
-                                        <p>Защита, бронирование слабых, особо уязвимых мест, прозрачной полиуретановой пленкой по системе STOP СКОЛ усилит прочностные характеристики лобового стекла, в разы увеличит шансы сохранить стекло на весь срок эксплуатации.</p>
+                                        <p>Периметр (на схеме обозначено красным) является слабой, наиболее уязвимой частью лобового стекла, что было установлено экспериментально, а также путем сбора и анализа разбитых стекол у клиентов. Удар в эту область
+                                            является причиной образования длинных трещин, а также двухсторонних не пригодных к ремонту повреждений, что в 90% случаев приводит к дорогостоящей замене лобового стекла.</p>
 
-                                        <p>Периметр является слабой, наиболее уязвимой частью лобового стекла. Удар в эту область гарантированно приводит к образованию длинных трещин, а так же двухсторонних не ремонтопригодных повреждений и в 90% случаев
-                                            приводит к замене лобового стекла. Установлено экспериментально, а также путем сбора и анализа разбитых лобовых стекол.</p>
-                                        <p>Каждый образец был разработан и проверен на соответствие лобовому стеклу конкретного автомобиля и протестировано в полевых условиях на протяжении двух лет. Лекала снимаются, оцифровываются при помощи современного
-                                            оборудования и вырезаются на ЧПУ станке. Подробная инструкция по монтажу прилагается. </p>
-
+                                        <p>Защита слабых мест лобового стекла полиуретановой пленкой (на схеме обозначено красным) усилит прочностные характеристики, увеличит шансы сохранить стекло на весь срок эксплуатации. Получен патент на полезную модель.
+                                            Протестировано в полевых условиях, на протяжении двух лет. </p>
+                                        <p>Кроме этого середина лобового стекла обрабатывается защитным полимерным покрытием. Поверхность становиться грязе-водо-отталкивающая, эффект Антидождь, что является профилактикой образования царапин на стекле.</p>
+                                        <p>Машину нужно будет оставить с вечера до утра, предварительно заехав на мойку.</p>
                                         <div class="card-group mb-3 text-left card-group-rain">
                                             <div class="card box-shadow">
                                                 <div class="card-body">
                                                     <h4 class="card-title">Легковая</h4>
-                                                    <h4 class="card-title">3500 <small class="text-muted">руб</small></h4>
+                                                    <h4 class="card-title">От 4000 <small class="text-muted">руб</small></h4>
                                                 </div>
                                             </div>
                                             <div class="card box-shadow">
                                                 <div class="card-body">
                                                     <h4 class="card-title">Внедорожник</h4>
-                                                    <h4 class="card-title">4500 <small class="text-muted">руб</small></h4>
+                                                    <h4 class="card-title">От 4500 <small class="text-muted">руб</small></h4>
                                                 </div>
                                             </div>
                                             <div class="card box-shadow">
                                                 <div class="card-body">
                                                     <h4 class="card-title">Микроавтобус</h4>
-                                                    <h4 class="card-title">5000 <small class="text-muted">руб</small></h4>
+                                                    <h4 class="card-title">От 5000 <small class="text-muted">руб</small></h4>
                                                 </div>
                                             </div>
                                         </div>
-
-                                        <p>На любые вопросы по технологии бронирования подробнее расскажет и запишет на установку Михаил Смирнов по тел.: <a href="tel:+79229200025">+79229200025</a></p>
-
-
+                                        <p><b>Обработка стекла защитным полимерным средством «Антидождь» в подарок!</b></p>
+                                        <p>На любые вопросы по технологии бронирования подробно расскажем и запишем на установку. </p>
                                     </div>
                                     <div class="modal-footer justify-content-between text-left">
-                                        <p>г. Киров, ул. Ленина 119А Сервис STOP СКОЛ тел.: <a href="tel:+78332452947">+7(8332)452947</a></p>
+                                        <p>г. Киров, ул. Ленина 119А Сервис STOP СКОЛ тел.: <a href="tel:+78332452947">+7 (8332) 45-29-47</a>, WhatsApp Viber <a href="tel:+79229952947">+79229952947</a> </p>
                                     </div>
                                 </div>
                             </div>
@@ -279,19 +277,19 @@
                             <div class="card box-shadow">
                                 <div class="card-body">
                                     <h4 class="card-title">Легковая</h4>
-                                    <h4 class="card-title">550 <small class="text-muted">руб</small></h4>
-                                </div>
-                            </div>
-                            <div class="card box-shadow">
-                                <div class="card-body">
-                                    <h4 class="card-title">Внедорожник</h4>
                                     <h4 class="card-title">600 <small class="text-muted">руб</small></h4>
                                 </div>
                             </div>
                             <div class="card box-shadow">
                                 <div class="card-body">
-                                    <h4 class="card-title">Микроавтобус</h4>
+                                    <h4 class="card-title">Внедорожник</h4>
                                     <h4 class="card-title">650 <small class="text-muted">руб</small></h4>
+                                </div>
+                            </div>
+                            <div class="card box-shadow">
+                                <div class="card-body">
+                                    <h4 class="card-title">Микроавтобус</h4>
+                                    <h4 class="card-title">700 <small class="text-muted">руб</small></h4>
                                 </div>
                             </div>
                         </div>
@@ -317,42 +315,42 @@
                             <path d="M1 1L10 10L1 19" stroke="#000000" stroke-width="2"></path>
                         </svg>
                     </button>
-                    <h5 class="modal-title" id="exampleModalLongTitle">Защита лобовых автостекол по системе STOP СКОЛ.</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">Защита лобовых автостекол</h5>
 
                 </div>
                 <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
                             <h3 class="py-4">Защитное полимерное покрытие автостекол</h3>
-                            <iframe class="pb-4" width="800" height="450" src="https://www.youtube.com/embed/gdmop7-Rp8M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-                            <div class="card-group mb-3 text-left card-group-rain">
-                                <div class="card box-shadow">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Легковая</h4>
-                                        <h4 class="card-title">550 <small class="text-muted">руб</small></h4>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg col-md-12">
+                                        <div class="text-center">
+                                            <img class="rounded" src="img/modal-light-1.png">
+                                        </div>
+                                        <p class="py-3">Абразив попадающий под щетки стеклоочистителей постоянно царапает стекло. Микронеровности - причина задержки грязи и воды на стеклянной поверхности.</p>
                                     </div>
-                                </div>
-                                <div class="card box-shadow">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Внедорожник</h4>
-                                        <h4 class="card-title">600 <small class="text-muted">руб</small></h4>
+                                    <div class="col-lg col-md-12">
+                                        <div class="text-center">
+                                            <img class="rounded" src="img/modal-light-2.png">
+                                        </div>
+                                        <p class="py-3">
+                                            Стекло моется, чистится, обезжиривается спиртом. Средство проникает в микротещины заполняя их, создает "эффект лотоса", поверхность становится грязе-водо-отталкивающая.</p>
                                     </div>
-                                </div>
-                                <div class="card box-shadow">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Микроавтобус</h4>
-                                        <h4 class="card-title">650 <small class="text-muted">руб</small></h4>
+                                    <div class="col-lg col-md-12">
+                                        <div class="text-center">
+                                            <img class="rounded" src="img/modal-light-3.png">
+                                        </div>
+                                        <p class="py-3">Прочное невидимое покрытие обеспечивает защиту от грязи и абразивного износа. Зимой решает проблему с обледенением стекла.</p>
                                     </div>
                                 </div>
                             </div>
 
-                            <p>Предварительная запись на нанесение покрытия по тел.: <a href="tel:+78332452947">+7(8332)452947</a></p>
-
 
                         </div>
                         <div class="modal-footer text-left justify-content-between">
-                            <p>г. Киров, ул. Ленина 119А Сервис STOP СКОЛ тел.: <a href="tel:+78332452947">+7(8332)452947</a></p>
+                            <p>г. Киров, ул. Ленина 119А Сервис STOP СКОЛ тел.: <a href="tel:+78332452947">+7 (8332) 45-29-47</a>, WhatsApp Viber <a href="tel:+79229952947">+79229952947</a> </p>
                         </div>
                     </div>
                 </div>
