--- a/home.html
+++ b/home.html
@@ -52,8 +52,8 @@
             <span class="navbar-text navbar-right text-right">
 				<div class="text-right">
 					<span id="open-mobile-map" onclick="mapsSelector()">
-					<span class="selected-city">г. Киров</span><span class="d-none d-md-inline">,</span>
-            <br class="d-xs-block d-sm-block d-md-none"> ул. Ленина 119а </span><br>
+					<span>г. Киров</span><span class="d-none d-md-inline">,</span>
+            <br class="d-xs-block d-sm-block d-md-none"><span class="selected-city"> ул. Ленина 119а </span></span><br>
             <a class="d-none d-md-block" style="color: black" href="tel:+7 (8332) 45 29 47">+7 (8332)
 						45‒29‒47</a>
         </div>
@@ -161,7 +161,7 @@
 
         <div class="container">
             <div class="btbb mt-5">
-                <h6 class="display-4 text-center">Помните:</h3>
+                <h6 class="display-4 text-center">Помните</h3>
                     <p class="lead">Пренебрежение ремонтом ведет к вынужденной замене лобового стекла. Своевременное обращение залог гарантированного результата!</p>
             </div>
         </div>
