Modal header fix

--- a/home.html
+++ b/home.html
@@ -214,7 +214,7 @@
 
                         <!-- Modal glass armor -->
                         <div class="modal" id="glassarmorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                            <div class="modal-header">
+                            <div class="modal-header fixed-top bg-white">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <svg class="t-popup__close-icon" width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M1 1L10 10L1 19" stroke="#000000" stroke-width="2"></path>
@@ -223,7 +223,7 @@
                                 <h5 class="modal-title" id="exampleModalLongTitle">Защита лобовых автостекол</h5>
 
                             </div>
-                            <div class="modal-dialog modal-lg" role="document">
+                            <div class="modal-dialog modal-lg pt-5" role="document">
                                 <div class="modal-content">
                                     <div class="modal-body">
                                         <h3 class="py-4">Бронирование лобового стекла по системе STOP СКОЛ</h3>
@@ -309,7 +309,7 @@
             <button type="button" class="btn btn-light btn-lg" data-toggle="modal" data-target="#antirainModal">Узнать больше</button>
             <!-- Modal anti-rain -->
             <div class="modal text-left" id="antirainModal" tabindex="-1" role="dialog" aria-labelledby="antirainModalTitle" aria-hidden="true">
-                <div class="modal-header">
+                <div class="modal-header  fixed-top bg-white">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <svg class="t-popup__close-icon" width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 1L10 10L1 19" stroke="#000000" stroke-width="2"></path>
@@ -318,7 +318,7 @@
                     <h5 class="modal-title" id="exampleModalLongTitle">Защита лобовых автостекол</h5>
 
                 </div>
-                <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-dialog modal-lg pt-5" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
                             <h3 class="py-4">Защитное полимерное покрытие автостекол</h3>
