--- a/home.html
+++ b/home.html
@@ -160,9 +160,9 @@
         </div>
 
         <div class="container">
-            <div class="btbb mt-5">
-                <h6 class="display-4 text-center">Помните</h3>
-                    <p class="lead">Пренебрежение ремонтом ведет к вынужденной замене лобового стекла. Своевременное обращение залог гарантированного результата!</p>
+            <div class="btbb mt-5 mb-3">
+                <h2 class="display-4 text-center">Помните</h2>
+                <p class="lead">Пренебрежение ремонтом ведет к вынужденной замене лобового стекла. Своевременное обращение залог гарантированного результата!</p>
             </div>
         </div>
         <div id="price" class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
@@ -439,7 +439,7 @@
 
         </footer>
         </div>
-        <a href="tel:+7 (8332) 45 29 47">
+        <a href="tel:+78332452947">
             <div class="btn-call-facelift d-xs-block d-sm-block d-md-none"></div>
         </a>
 
