--- a/home.html
+++ b/home.html
@@ -378,9 +378,9 @@
                 </ul>
             </div>
             <div class="btbb_no_logo mt-5">
-                <h6 class="display-4 text-center">Напоминаем</h3>
-                    <p class="lead">Осмотр и консультации в нашем сервисе бесплатны и ни к чему не обязывают! Цена фиксированная и в процессе ремонта не меняется, даже если возникли ньюансы в сторону увеличения. Персональная ответственность за выполненную работу. Чеки.
-                        Квитации. Гарантии! А также постгарантийное обслуживание!</p>
+                <h2 class="display-5 text-center">Напоминаем</h2>
+                <p class="lead">Осмотр и консультации в нашем сервисе бесплатны и ни к чему не обязывают! Цена фиксированная и в процессе ремонта не меняется, даже если возникли ньюансы в сторону увеличения. Персональная ответственность за выполненную работу. Чеки. Квитации.
+                    Гарантии! А также постгарантийное обслуживание!</p>
             </div>
         </div>
         <div class="pricing-header px-3 py-3 pt-md-2 mx-auto text-center" style="padding-top: 2.5rem!important;">
