--- a/home.html
+++ b/home.html
@@ -397,8 +397,8 @@
                         <h2 class="display-4">Всегда на связи</h2>
                         <address>
 							<span onclick="mapsSelector()">г. Киров, ул. Ленина 119а</span><br>
-							<a href="tel:+7 (8332) 45 29 47">+7 (8332) 45-29-47</a><br>
-							<a href="tel:+7 (8332) 45 26 47">+7 (8332) 45-26-47</a><br>
+							<a href="tel:+7 (8332) 45 29 47">+7 (8332) 45-29-47</a> или <a href="tel:+79229952947">+7 (922) 995-29-47</a><br>
+							<a href="tel:+7 (8332) 45 26 47">+7 (8332) 45-26-47</a> или <a href="tel:+79229952647">+7 (922) 995-26-47</a><br>
 							с 8:00 до 21:00<br>
 							<a style="color: inherit" href="http://стопскол.рф/">http://стопскол.рф/</a>
 						</address>
@@ -439,7 +439,7 @@
 
         </footer>
         </div>
-        <a href="tel:+78332452947">
+        <a href="tel:+79229952947">
             <div class="btn-call-facelift d-xs-block d-sm-block d-md-none"></div>
         </a>
 
